--- a/app/templates/general/helper.html
+++ b/app/templates/general/helper.html
@@ -270,8 +270,14 @@
   height: 100%;
 }
 
-.is-height-as-control {
+.is-control-height {
   height: $control-height;
+}
+
+.is-control-height-centered {
+  height: $control-height;
+  display: flex;
+  align-items: center;
 }
 
 .is-clickable {
