--- a/app/src/element/button.scss
+++ b/app/src/element/button.scss
@@ -1,5 +1,7 @@
 $button-font-weight: $weight-normal !default;
 $button-font-size: $size-normal !default;
+$button-small-height: 3.2rem !default;
+$button-small-padding-horizontal: 1.5rem !default;
 $button-large-height: 7.2rem !default;
 $button-large-padding-horizontal: 4.8rem !default;
 
@@ -9,6 +11,12 @@ $button-large-padding-horizontal: 4.8rem !default;
 
   &.is-fat {
     min-width: 100px;
+  }
+
+  &.is-small {
+    height: $button-small-height;
+    padding-left: $button-small-padding-horizontal;
+    padding-right: $button-small-padding-horizontal;
   }
 
   &.is-large {
