--- a/app/src/form/checkbox.scss
+++ b/app/src/form/checkbox.scss
@@ -1,3 +1,5 @@
+$checkbox-size: 1em !default;
+$checkbox-inner-size: $checkbox-size * 0.8 !default;
 $checkbox-checked-color: $primary !default;
 $checkbox-checked-border-color: $primary !default;
 $checkbox-checked-filled-background-color: $primary !default;
@@ -12,18 +14,17 @@ $checkbox-title-filled-color: $light !default;
     visibility: hidden;
 
     &+span {
-      padding-left: 1.75em;
+      padding-left: $checkbox-size + 0.5;
   
       &::before {
         position: absolute;
         content: '';
         border: 1px solid $border;
         background-color: #fff;
-        height: 1.25em;
-        width: 1.25em;
+        height: $checkbox-size;
+        width: $checkbox-size;
+        top: 0;
         left: 0;
-        transition: background .25s linear;
-        -webkit-transition: background .25s linear;
       }
     }
 
@@ -36,13 +37,13 @@ $checkbox-title-filled-color: $light !default;
       content: '✓';
       text-align: center;
       font-weight: bold;
-      height: 1.25em;
-      width: 1.25em;
+      color: $checkbox-checked-color;
+      font-size: $checkbox-inner-size;
+      line-height: $checkbox-size / $checkbox-inner-size;
+      height: $checkbox-size / $checkbox-inner-size * 1em;
+      width: $checkbox-size / $checkbox-inner-size * 1em;
       top: 0;
       left: 0;
-      transition: background 0.25s linear;
-      -webkit-transition: background 0.25s linear;
-      color: $checkbox-checked-color;
     }
   }
 
