--- a/app/src/utilities/mixins.scss
+++ b/app/src/utilities/mixins.scss
@@ -22,3 +22,10 @@
   margin-left: .2em;
   display: block;
 }
+
+/* IE10+ CSS styles go here */
+@mixin ie {
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    @content;
+  }  
+}
