--- a/app/src/sample-variables.scss
+++ b/app/src/sample-variables.scss
@@ -123,6 +123,9 @@ $custom-colors: (
 );
 $custom-shades: null;
 
+// Scrollbar width
+$vertical-scrollbar-width: 17px;
+
 // Responsive Breakpoint
 // mobile up to 767px;
 // $tablet: 768px; // tablet size by chrome's device toolbar                      // for 768 (ipad portrait)
