--- a/app/src/base/generic.scss
+++ b/app/src/base/generic.scss
@@ -118,3 +118,14 @@ body {
   word-wrap: break-word;
   word-break: break-word;
 }
+
+// loading with specific color
+.is-loading {
+  @each $name, $pair in $colors {
+    $color: nth($pair, 1);
+    &.is-#{$name}::after {
+      border-left-color: $color !important;
+      border-bottom-color: $color !important;
+    }
+  }
+}
